# Student-Management-GROUP6-KTLT-23CLC03

./: .gitignore  Coding Standards and Guidelines.docx  README.md
CSV Files/: AllClasses.csv  AllCourses.csv  AllSemesters.csv  AllStaffs.csv  AllStudents.csv
DOCUMENT/: Function Desgin.txt  GitHub Guidelines.docx
DOCUMENTS/: Design System.txt  func.h
Documentation/: Coding Standards and Guidelines.docx
PROJECT TEST/: ClassList.csv  CourseList.csv  StudentList.csv  function.cpp  main.cpp  struct.h  testcode.cpp
PROJECT TEST 2/: Class.csv  SchoolYear.csv  Student.csv  functionOfFeature.cpp  functionOfStruct.cpp  mainProject.cpp  structProject.h
SOURCE/: Accounts.cpp  Accounts.h  AllStudents.csv  Class.cpp  Class.h  Course.cpp  Course.h  Data.cpp  Data.h  GlobalVariable.cpp  GlobalVariable.h  GlobalVariables.cpp  GlobalVariables.h  Node.h  SchoolYear.cpp  SchoolYear.h  Semester.cpp  Semester.h  Staff.cpp  Staff.h  Student.cpp  Student.h  Sub.cpp  Sub.h  System.cpp  System.h  main.cpp  scoreboardClass.cpp  scoreboardClass.h  scoreboardclass.cpp  scoreboardclass.h  struct.h  system.cpp  temp.cpp  viewScoreboardClass.cpp  viewScoreboardClass.h
SOURCE CODE/: CMakeLists.txt
SOURCE CODE/MAIN/: StudentHeader.h  StudentSource.cpp  header.h  main.cpp
SOURCE CODE/STAFF/: StaffSource.cpp  staff.cpp  staff.h
SOURCE CODE/STUDENT/: student.cpp  student.h
SOURCE CODE/SYSTEM/: AllCourses.csv  CSC001_23APCS01.csv  CSC002_23APCS01.csv  CSC003_23APCS01.csv  MTH001_23APCS01.csv  main.cpp  staff.cpp  student.cpp  student.h  system.h
StudentManagementSystem/: AllStaffs.csv  (+30 more)
(+766 files in other folders)
